testdata/test/resources/com/yafred/asn1/test/should_fail/set_duplicate_tag.asn
-- FAILS: duplicate tag in SET

Set DEFINITIONS IMPLICIT TAGS ::= BEGIN

Root ::= SET {
   un BOOLEAN,
   deux INTEGER,
   trois BOOLEAN
}


END